05_Kubernetes/manifests/site-monitor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site-monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: site-monitor
  template:
    metadata:
      labels:
        app: site-monitor
    spec:
      hostNetwork: true
      containers:
      - name: site-monitor
        image: polikoff/site-monitor:latest
